tryong to fix things up

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <body>
     <div class="container">
         <header class="banner">
-            <div class="ascii-text">  ██████ ██   ██ ███████ ██████  ███████ ██████   ██████  ██████  ███████ ██████  ███████     ██████  ██████  ███    ███ 
+            <div class="ascii-text"> ██████ ██   ██ ███████ ██████  ███████ ██████   ██████  ██████  ███████ ██████  ███████     ██████  ██████  ███    ███ 
 ██      ██   ██ ██      ██   ██ ██      ██   ██ ██    ██ ██   ██ ██      ██   ██ ██         ██      ██    ██ ████  ████ 
 ██      ███████ █████   ██████  ███████ ██████  ██    ██ ██████  █████   ██████  ███████    ██      ██    ██ ██ ████ ██ 
 ██      ██   ██ ██      ██   ██      ██ ██   ██ ██    ██ ██   ██ ██      ██   ██      ██    ██      ██    ██ ██  ██  ██ 
@@ -129,7 +129,7 @@
             </section>
 
             <section class="section" id="contact">
-                <div class="tenor-gif-embed" data-postid="23820495" data-share-method="host" data-aspect-ratio="1.50943" data-width="100%"><a href="https://tenor.com/view/arson-anime-gif-23820495">
+                <img src="https://media1.tenor.com/m/JCZY5bm_YNsAAAAd/arson-anime.gif" width="833" height="551.8625" alt="a picture of a girl with the words just committed arson on the bottom" fetchpriority="high" style="max-width: 833px;">
             </section>
         </main>
 
